// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccountOverview stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="space-y-5"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h1
        class="text-2xl font-semibold text-foreground mb-1"
      >
        Welcome back, John!
      </h1>
      <p
        class="text-sm text-muted-foreground"
      >
        Manage your account, view orders, and discover personalized recommendations.
      </p>
    </div>
  </div>
  <div
    class="space-y-5"
  >
    <div
      class="space-y-0"
    >
      <div
        class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui bg-card border-border rounded-b-none border-b-0"
        data-slot="card"
      >
        <div
          class="px-6"
          data-slot="card-content"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex flex-col items-start gap-1.5 flex-1"
            >
              <h2
                class="text-lg font-bold leading-[120%] text-card-foreground"
              >
                Recent Orders
              </h2>
              <p
                class="text-sm font-normal leading-5 text-muted-foreground"
              >
                These are your last 5 orders
              </p>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 shrink-0 bg-secondary shadow-2xs"
              data-discover="true"
              data-size="default"
              data-slot="button"
              data-variant="outline"
              href="/global/en-GB/account/orders"
            >
              View All
            </a>
          </div>
        </div>
      </div>
      <ul
        class="space-y-4 m-0 border-x border-t border-border rounded-t-none"
        role="list"
      >
        <li>
          <a
            class="block transition-opacity hover:opacity-95 m-0"
            data-discover="true"
            href="/global/en-GB/account/orders/INV001"
          >
            <div
              class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
              data-slot="card"
            >
              <div
                class="p-6 space-y-4 border-b border-separator"
                data-slot="card-content"
              >
                <div
                  class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
                >
                  <div
                    class="flex flex-wrap gap-x-8 gap-y-2"
                  >
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Order ID
                      </p>
                      <p
                        class="text-sm leading-none text-left text-foreground font-medium"
                      >
                        #INV001
                      </p>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Order Date
                      </p>
                      <p
                        class="text-sm font-medium leading-none text-left text-foreground"
                      >
                        14 Sept 2024
                      </p>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Total
                      </p>
                      <p
                        class="text-sm font-medium leading-none text-left text-foreground"
                      >
                        £250.00
                      </p>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Items
                      </p>
                      <p
                        class="text-sm leading-none text-left text-foreground font-semibold"
                      >
                        4
                      </p>
                    </div>
                  </div>
                  <span
                    class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-positive text-success-foreground"
                    data-slot="badge"
                    data-testid="order-status-badge"
                  >
                    Ready for Pickup
                  </span>
                </div>
                <div
                  class="flex flex-wrap gap-2"
                >
                  <div
                    class="relative"
                  >
                    <div
                      class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                    >
                      <img
                        alt="Classic White Shirt"
                        class="w-full h-full object-cover"
                        loading="lazy"
                        src="__ASSET_MOCK__"
                      />
                    </div>
                  </div>
                  <div
                    class="relative"
                  >
                    <div
                      class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                    >
                      <img
                        alt="Blue Dress Pants"
                        class="w-full h-full object-cover"
                        loading="lazy"
                        src="__ASSET_MOCK__"
                      />
                    </div>
                  </div>
                  <div
                    class="relative"
                  >
                    <div
                      class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                    >
                      <img
                        alt="Silk Scarf"
                        class="w-full h-full object-cover"
                        loading="lazy"
                        src="__ASSET_MOCK__"
                      />
                    </div>
                  </div>
                  <div
                    class="relative"
                  >
                    <div
                      class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                    >
                      <img
                        alt="Leather Handbag"
                        class="w-full h-full object-cover"
                        loading="lazy"
                        src="__ASSET_MOCK__"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui rounded-ui bg-muted border-border p-0"
                  data-slot="card"
                >
                  <div
                    class="p-4 space-y-2"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-map-pin size-4 text-muted-foreground"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                      <span
                        class="text-sm leading-none text-left font-semibold text-foreground"
                      >
                        Pickup Location
                      </span>
                    </div>
                    <div
                      class="space-y-1 pl-6"
                    >
                      <div>
                        <p
                          class="text-left text-xs font-normal text-muted-foreground"
                        >
                          Location
                        </p>
                        <p
                          class="text-sm font-medium leading-none text-left text-foreground"
                        >
                          Market Street San Francisco
                        </p>
                      </div>
                      <div>
                        <p
                          class="text-left text-xs font-normal text-muted-foreground"
                        >
                          Address
                        </p>
                        <p
                          class="text-sm leading-none text-left text-foreground font-normal"
                        >
                          415 Mission Street, San Francisco, CA 94105
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="pt-2"
                >
                  <span
                    class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
                  >
                    View Order Details
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-right size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9 18 6-6-6-6"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="block transition-opacity hover:opacity-95 m-0"
            data-discover="true"
            href="/global/en-GB/account/orders/INV002"
          >
            <div
              class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
              data-slot="card"
            >
              <div
                class="p-6 space-y-4 border-b border-separator"
                data-slot="card-content"
              >
                <div
                  class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
                >
                  <div
                    class="flex flex-wrap gap-x-8 gap-y-2"
                  >
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Order ID
                      </p>
                      <p
                        class="text-sm leading-none text-left text-foreground font-medium"
                      >
                        #INV002
                      </p>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Order Date
                      </p>
                      <p
                        class="text-sm font-medium leading-none text-left text-foreground"
                      >
                        10 Sept 2024
                      </p>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Total
                      </p>
                      <p
                        class="text-sm font-medium leading-none text-left text-foreground"
                      >
                        £89.99
                      </p>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <p
                        class="text-left text-xs font-medium text-muted-foreground"
                      >
                        Item
                      </p>
                      <p
                        class="text-sm leading-none text-left text-foreground font-semibold"
                      >
                        1
                      </p>
                    </div>
                  </div>
                  <span
                    class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-positive text-success-foreground"
                    data-slot="badge"
                    data-testid="order-status-badge"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-check mr-1 size-3.5"
                      data-testid="order-status-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 6 9 17l-5-5"
                      />
                    </svg>
                    Completed
                  </span>
                </div>
                <div
                  class="flex flex-wrap gap-2"
                >
                  <div
                    class="relative"
                  >
                    <div
                      class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                    >
                      <img
                        alt="Running Shoes"
                        class="w-full h-full object-cover"
                        loading="lazy"
                        src="__ASSET_MOCK__"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="pt-2"
                >
                  <span
                    class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
                  >
                    View Order Details
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-right size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9 18 6-6-6-6"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
      <div
        class="p-6 m-0 border-b border-x border-border rounded-b-xl flex flex-row items-center w-full gap-4"
      >
        <p
          class="text-sm font-medium leading-none text-left text-muted-foreground min-w-0 shrink"
          data-testid="total-orders-text"
        >
          Viewing 2 orders
        </p>
      </div>
    </div>
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
      data-slot="card"
    >
      <div
        class="p-6"
        data-slot="card-content"
      >
        <div
          class="space-y-4"
        >
          <div>
            <h2
              class="text-lg font-semibold text-foreground"
            >
              Rate Your Recent Purchases
            </h2>
            <p
              class="text-sm text-muted-foreground mt-1"
            >
              Share your experience and help others discover great products
            </p>
          </div>
          <div
            class="rounded-ui border border-border p-4 sm:p-5"
          >
            <div
              class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
            >
              <div
                class="flex min-w-0 flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:gap-4"
              >
                <div
                  class="flex shrink-0 flex-wrap gap-2"
                >
                  <a
                    class="relative block"
                    data-discover="true"
                    href="/global/en-GB/product/prod-1"
                  >
                    <div
                      class="h-16 w-16 overflow-hidden border border-border bg-muted"
                    >
                      <img
                        alt="Classic White Shirt"
                        class="h-full w-full object-cover"
                        loading="lazy"
                        src="__ASSET_MOCK__"
                      />
                    </div>
                  </a>
                  <a
                    class="relative block"
                    data-discover="true"
                    href="/global/en-GB/product/prod-2"
                  >
                    <div
                      class="h-16 w-16 overflow-hidden border border-border bg-muted"
                    >
                      <img
                        alt="Blue Dress Pants"
                        class="h-full w-full object-cover"
                        loading="lazy"
                        src="__ASSET_MOCK__"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="min-w-0 flex-1 space-y-1 text-left"
                >
                  <p
                    class="text-xs text-muted-foreground"
                  >
                    Order #INV001 • Ready For Pickup
                  </p>
                </div>
              </div>
              <div
                class="flex w-full shrink-0 justify-end sm:w-auto sm:self-center"
              >
                <a
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-9 px-4 py-2 has-[>svg]:px-3 min-w-[10.5rem] bg-account-action-primary text-account-action-primary-foreground hover:bg-account-action-primary/90"
                  data-discover="true"
                  data-size="default"
                  data-slot="button"
                  data-variant="default"
                  href="/global/en-GB/account/orders/INV001"
                >
                  Rate & review
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h2
        class="text-lg font-semibold text-foreground mb-2"
      >
        Need Help?
      </h2>
      <p
        class="text-sm text-muted-foreground mb-4"
      >
        We're here to assist you with any questions or concerns
      </p>
      <div
        class="flex flex-wrap gap-3"
      >
        <button
          class="justify-center whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex items-center gap-2 cursor-pointer"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Contact info
        </button>
        <button
          class="justify-center whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex items-center gap-2 cursor-pointer"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Browse FAQ
        </button>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-6"
      >
        <div
          class="flex-1"
        >
          <h2
            class="tracking-tight text-left text-lg font-semibold text-foreground mb-2"
          >
            Download Our App
          </h2>
          <p
            class="text-sm text-muted-foreground mb-6"
          >
            Get the best shopping experience on the go. Access exclusive deals, track orders, and shop faster.
          </p>
          <div
            class="flex flex-wrap gap-3 items-center"
          >
            <img
              alt="App Store"
              aria-label="App Store"
              class="h-10 w-auto"
              src="__ASSET_MOCK__"
            />
            <img
              alt="Google Play"
              aria-label="Google Play"
              class="h-10 w-auto"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="flex flex-col items-center gap-2 lg:flex-shrink-0"
        >
          <div
            class="w-32 h-32 bg-muted flex items-center justify-center border-2 border-dashed border-border"
          >
            <svg
              aria-label="QR Code"
              class="w-16 h-16 text-muted-foreground"
              fill="none"
              role="img"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <p
            class="text-sm text-muted-foreground"
          >
            QR Code
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h2
        class="text-lg font-semibold text-foreground mb-4"
      >
        Quick Links
      </h2>
      <ul
        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
        role="list"
      >
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Account Details
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/addresses"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Manage Addresses
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/payment-methods"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-credit-card h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  width="20"
                  x="2"
                  y="5"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="10"
                  y2="10"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Payment Methods
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/orders"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-receipt h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
                />
                <path
                  d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
                />
                <path
                  d="M12 17.5v-11"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Order History
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`AccountOverview stories snapshot > EmptyOrders story renders and matches snapshot 1`] = `
<div
  class="space-y-5"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h1
        class="text-2xl font-semibold text-foreground mb-1"
      >
        Welcome back, John!
      </h1>
      <p
        class="text-sm text-muted-foreground"
      >
        Manage your account, view orders, and discover personalized recommendations.
      </p>
    </div>
  </div>
  <div
    class="space-y-5"
  >
    <div
      class="space-y-0"
    >
      <div
        class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui bg-card border-border rounded-b-none border-b-0"
        data-slot="card"
      >
        <div
          class="px-6"
          data-slot="card-content"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex flex-col items-start gap-1.5 flex-1"
            >
              <h2
                class="text-lg font-bold leading-[120%] text-card-foreground"
              >
                Recent Orders
              </h2>
              <p
                class="text-sm font-normal leading-5 text-muted-foreground"
              >
                These are your last 5 orders
              </p>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 shrink-0 bg-secondary shadow-2xs"
              data-discover="true"
              data-size="default"
              data-slot="button"
              data-variant="outline"
              href="/global/en-GB/account/orders"
            >
              View All
            </a>
          </div>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui border-border m-0 border-b-0"
        data-slot="card"
      >
        <div
          class="p-0"
          data-slot="card-content"
        >
          <div
            class="py-4 space-y-4 flex flex-col items-center justify-center"
          >
            <h4
              class="text-2xl font-semibold tracking-tight text-left text-muted-foreground w-fit"
            >
              You haven't placed an order yet. Once you place an order the details will show up here.
            </h4>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
              data-discover="true"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/global/en-GB/"
            >
              Continue Shopping
            </a>
          </div>
        </div>
      </div>
      <div
        class="p-6 m-0 border-b border-x border-border rounded-b-xl flex flex-row items-center w-full gap-4"
      >
        <p
          class="text-sm font-medium leading-none text-left text-muted-foreground min-w-0 shrink"
          data-testid="total-orders-text"
        >
          Viewing 0 orders
        </p>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h2
        class="text-lg font-semibold text-foreground mb-2"
      >
        Need Help?
      </h2>
      <p
        class="text-sm text-muted-foreground mb-4"
      >
        We're here to assist you with any questions or concerns
      </p>
      <div
        class="flex flex-wrap gap-3"
      >
        <button
          class="justify-center whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex items-center gap-2 cursor-pointer"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Contact info
        </button>
        <button
          class="justify-center whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex items-center gap-2 cursor-pointer"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Browse FAQ
        </button>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-6"
      >
        <div
          class="flex-1"
        >
          <h2
            class="tracking-tight text-left text-lg font-semibold text-foreground mb-2"
          >
            Download Our App
          </h2>
          <p
            class="text-sm text-muted-foreground mb-6"
          >
            Get the best shopping experience on the go. Access exclusive deals, track orders, and shop faster.
          </p>
          <div
            class="flex flex-wrap gap-3 items-center"
          >
            <img
              alt="App Store"
              aria-label="App Store"
              class="h-10 w-auto"
              src="__ASSET_MOCK__"
            />
            <img
              alt="Google Play"
              aria-label="Google Play"
              class="h-10 w-auto"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="flex flex-col items-center gap-2 lg:flex-shrink-0"
        >
          <div
            class="w-32 h-32 bg-muted flex items-center justify-center border-2 border-dashed border-border"
          >
            <svg
              aria-label="QR Code"
              class="w-16 h-16 text-muted-foreground"
              fill="none"
              role="img"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <p
            class="text-sm text-muted-foreground"
          >
            QR Code
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h2
        class="text-lg font-semibold text-foreground mb-4"
      >
        Quick Links
      </h2>
      <ul
        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
        role="list"
      >
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Account Details
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/addresses"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Manage Addresses
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/payment-methods"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-credit-card h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  width="20"
                  x="2"
                  y="5"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="10"
                  y2="10"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Payment Methods
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/orders"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-receipt h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
                />
                <path
                  d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
                />
                <path
                  d="M12 17.5v-11"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Order History
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`AccountOverview stories snapshot > LoadingSkeleton story renders and matches snapshot 1`] = `
<div
  class="space-y-5"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="bg-accent animate-pulse rounded-ui h-6 w-64 mb-1"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-ui h-4 w-96 max-w-full"
        data-slot="skeleton"
      />
    </div>
  </div>
  <div
    class="space-y-5"
  >
    <div
      class="space-y-0"
    >
      <div
        class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui bg-card border-border rounded-b-none border-b-0"
        data-slot="card"
      >
        <div
          class="px-5"
          data-slot="card-content"
        >
          <div
            class="bg-accent animate-pulse rounded-ui h-7 w-40 mb-1.5"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-4 w-56"
            data-slot="skeleton"
          />
        </div>
      </div>
      <div
        class="space-y-4 m-0 border-x border-t border-border"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui py-0 border-0 border-border"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-border animate-pulse"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between border-b border-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="h-10 w-24 bg-muted-foreground/20 rounded-ui"
                />
                <div
                  class="h-10 w-20 bg-muted-foreground/20 rounded-ui"
                />
                <div
                  class="h-10 w-16 bg-muted-foreground/20 rounded-ui"
                />
              </div>
              <div
                class="h-8 w-24 bg-muted-foreground/20 rounded-full"
              />
            </div>
            <div
              class="flex gap-2"
            >
              <div
                class="w-16 h-16 bg-muted-foreground/20 rounded-lg"
              />
              <div
                class="w-16 h-16 bg-muted-foreground/20 rounded-lg"
              />
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui py-0 border-0 border-border"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-border animate-pulse"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between border-b border-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="h-10 w-24 bg-muted-foreground/20 rounded-ui"
                />
                <div
                  class="h-10 w-20 bg-muted-foreground/20 rounded-ui"
                />
                <div
                  class="h-10 w-16 bg-muted-foreground/20 rounded-ui"
                />
              </div>
              <div
                class="h-8 w-24 bg-muted-foreground/20 rounded-full"
              />
            </div>
            <div
              class="flex gap-2"
            >
              <div
                class="w-16 h-16 bg-muted-foreground/20 rounded-lg"
              />
              <div
                class="w-16 h-16 bg-muted-foreground/20 rounded-lg"
              />
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui py-0 border-0 border-border"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-border animate-pulse"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between border-b border-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="h-10 w-24 bg-muted-foreground/20 rounded-ui"
                />
                <div
                  class="h-10 w-20 bg-muted-foreground/20 rounded-ui"
                />
                <div
                  class="h-10 w-16 bg-muted-foreground/20 rounded-ui"
                />
              </div>
              <div
                class="h-8 w-24 bg-muted-foreground/20 rounded-full"
              />
            </div>
            <div
              class="flex gap-2"
            >
              <div
                class="w-16 h-16 bg-muted-foreground/20 rounded-lg"
              />
              <div
                class="w-16 h-16 bg-muted-foreground/20 rounded-lg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="p-6 m-0 border-b border-x border-border rounded-b-xl"
      >
        <div
          class="h-5 w-32 bg-muted-foreground/20 rounded-ui"
        />
      </div>
    </div>
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
      data-slot="card"
    >
      <div
        class="p-6 space-y-4"
        data-slot="card-content"
      >
        <div
          class="bg-accent animate-pulse rounded-ui h-7 w-72 max-w-full"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-ui h-4 w-full max-w-lg"
          data-slot="skeleton"
        />
        <div
          class="rounded-ui border border-border p-4 sm:p-5"
        >
          <div
            class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between sm:gap-6"
          >
            <div
              class="flex min-w-0 flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:gap-4"
            >
              <div
                class="flex shrink-0 gap-2"
              >
                <div
                  class="bg-accent animate-pulse rounded-ui h-16 w-16 shrink-0"
                  data-slot="skeleton"
                />
                <div
                  class="bg-accent animate-pulse rounded-ui h-16 w-16 shrink-0"
                  data-slot="skeleton"
                />
              </div>
              <div
                class="min-w-0 flex-1 space-y-2"
              >
                <div
                  class="bg-accent animate-pulse rounded-ui h-4 w-full"
                  data-slot="skeleton"
                />
                <div
                  class="bg-accent animate-pulse rounded-ui h-3 w-40"
                  data-slot="skeleton"
                />
              </div>
            </div>
            <div
              class="flex w-full justify-end sm:w-auto sm:self-center"
            >
              <div
                class="bg-accent animate-pulse rounded-ui h-10 w-full max-w-none sm:h-10 sm:w-40"
                data-slot="skeleton"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="bg-accent animate-pulse rounded-ui h-7 w-48 mb-2"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-ui h-4 w-full max-w-xl mb-4"
        data-slot="skeleton"
      />
      <div
        class="flex flex-wrap gap-3"
      >
        <div
          class="bg-accent animate-pulse rounded-ui h-10 w-32"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-ui h-10 w-36"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-ui h-10 w-32"
          data-slot="skeleton"
        />
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-6"
      >
        <div
          class="flex-1"
        >
          <div
            class="bg-accent animate-pulse rounded-ui h-7 w-48 mb-2"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-4 w-full max-w-xl mb-6"
            data-slot="skeleton"
          />
          <div
            class="flex flex-wrap gap-3"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-12 w-32"
              data-slot="skeleton"
            />
            <div
              class="bg-accent animate-pulse rounded-ui h-12 w-36"
              data-slot="skeleton"
            />
          </div>
        </div>
        <div
          class="flex flex-col items-center gap-2 lg:flex-shrink-0"
        >
          <div
            class="bg-accent animate-pulse rounded-ui w-40 h-40"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-4 w-16"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="bg-accent animate-pulse rounded-ui h-7 w-32 mb-4"
        data-slot="skeleton"
      />
      <div
        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
      >
        <div
          class="h-full flex flex-col items-center justify-center gap-3 p-6 rounded-ui border"
        >
          <div
            class="bg-accent animate-pulse rounded-ui w-4 h-4"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-5 w-24"
            data-slot="skeleton"
          />
        </div>
        <div
          class="h-full flex flex-col items-center justify-center gap-3 p-6 rounded-ui border"
        >
          <div
            class="bg-accent animate-pulse rounded-ui w-4 h-4"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-5 w-24"
            data-slot="skeleton"
          />
        </div>
        <div
          class="h-full flex flex-col items-center justify-center gap-3 p-6 rounded-ui border"
        >
          <div
            class="bg-accent animate-pulse rounded-ui w-4 h-4"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-5 w-24"
            data-slot="skeleton"
          />
        </div>
        <div
          class="h-full flex flex-col items-center justify-center gap-3 p-6 rounded-ui border"
        >
          <div
            class="bg-accent animate-pulse rounded-ui w-4 h-4"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-5 w-24"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountOverview stories snapshot > NoFirstNameFallback story renders and matches snapshot 1`] = `
<div
  class="space-y-5"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h1
        class="text-2xl font-semibold text-foreground mb-1"
      >
        Welcome back, there!
      </h1>
      <p
        class="text-sm text-muted-foreground"
      >
        Manage your account, view orders, and discover personalized recommendations.
      </p>
    </div>
  </div>
  <div
    class="space-y-5"
  >
    <div
      class="space-y-0"
    >
      <div
        class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui bg-card border-border rounded-b-none border-b-0"
        data-slot="card"
      >
        <div
          class="px-6"
          data-slot="card-content"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex flex-col items-start gap-1.5 flex-1"
            >
              <h2
                class="text-lg font-bold leading-[120%] text-card-foreground"
              >
                Recent Orders
              </h2>
              <p
                class="text-sm font-normal leading-5 text-muted-foreground"
              >
                These are your last 5 orders
              </p>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 shrink-0 bg-secondary shadow-2xs"
              data-discover="true"
              data-size="default"
              data-slot="button"
              data-variant="outline"
              href="/global/en-GB/account/orders"
            >
              View All
            </a>
          </div>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui border-border m-0 border-b-0"
        data-slot="card"
      >
        <div
          class="p-0"
          data-slot="card-content"
        >
          <div
            class="py-4 space-y-4 flex flex-col items-center justify-center"
          >
            <h4
              class="text-2xl font-semibold tracking-tight text-left text-muted-foreground w-fit"
            >
              You haven't placed an order yet. Once you place an order the details will show up here.
            </h4>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
              data-discover="true"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/global/en-GB/"
            >
              Continue Shopping
            </a>
          </div>
        </div>
      </div>
      <div
        class="p-6 m-0 border-b border-x border-border rounded-b-xl flex flex-row items-center w-full gap-4"
      >
        <p
          class="text-sm font-medium leading-none text-left text-muted-foreground min-w-0 shrink"
          data-testid="total-orders-text"
        >
          Viewing 0 orders
        </p>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h2
        class="text-lg font-semibold text-foreground mb-2"
      >
        Need Help?
      </h2>
      <p
        class="text-sm text-muted-foreground mb-4"
      >
        We're here to assist you with any questions or concerns
      </p>
      <div
        class="flex flex-wrap gap-3"
      >
        <button
          class="justify-center whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex items-center gap-2 cursor-pointer"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Contact info
        </button>
        <button
          class="justify-center whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex items-center gap-2 cursor-pointer"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Browse FAQ
        </button>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-6"
      >
        <div
          class="flex-1"
        >
          <h2
            class="tracking-tight text-left text-lg font-semibold text-foreground mb-2"
          >
            Download Our App
          </h2>
          <p
            class="text-sm text-muted-foreground mb-6"
          >
            Get the best shopping experience on the go. Access exclusive deals, track orders, and shop faster.
          </p>
          <div
            class="flex flex-wrap gap-3 items-center"
          >
            <img
              alt="App Store"
              aria-label="App Store"
              class="h-10 w-auto"
              src="__ASSET_MOCK__"
            />
            <img
              alt="Google Play"
              aria-label="Google Play"
              class="h-10 w-auto"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="flex flex-col items-center gap-2 lg:flex-shrink-0"
        >
          <div
            class="w-32 h-32 bg-muted flex items-center justify-center border-2 border-dashed border-border"
          >
            <svg
              aria-label="QR Code"
              class="w-16 h-16 text-muted-foreground"
              fill="none"
              role="img"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <p
            class="text-sm text-muted-foreground"
          >
            QR Code
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border shadow-ui py-0"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <h2
        class="text-lg font-semibold text-foreground mb-4"
      >
        Quick Links
      </h2>
      <ul
        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
        role="list"
      >
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Account Details
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/addresses"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Manage Addresses
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/payment-methods"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-credit-card h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  width="20"
                  x="2"
                  y="5"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="10"
                  y2="10"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Payment Methods
              </span>
            </div>
          </a>
        </li>
        <li
          class="h-full"
        >
          <a
            class="group h-full flex"
            data-discover="true"
            href="/global/en-GB/account/orders"
          >
            <div
              class="h-full flex-1 flex flex-col items-center justify-center gap-3 p-6 rounded-ui border transition-all duration-200 hover:shadow-md hover:border-primary/50 group-focus-visible:ring-2 group-focus-visible:ring-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-receipt h-4 w-4 text-foreground group-hover:text-primary transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
                />
                <path
                  d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
                />
                <path
                  d="M12 17.5v-11"
                />
              </svg>
              <span
                class="text-sm font-medium text-foreground text-center leading-5 group-hover:text-primary transition-colors"
              >
                Order History
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
